@startuml
'https://plantuml.com/class-diagram

allowmixing
skinparam linetype ortho
'skinparam linetype polyline

'rectangle client

package Servlet-FilterChain {
    interface FilterChain
    interface Filter
    abstract class GenericFilterBean
    class DelegatingFilterProxy
    class FilterChainProxy
    class VirtualFilterChain
}


package Spring-SecurityFilterChain {
    interface SecurityFilterChain
    class DefaultSecurityFilterChain
    class YourOwnSecurityFilters <<SecurityConfig injection>> #moccasin ##[dotted]
}


Filter <|.. GenericFilterBean
GenericFilterBean <|-- DelegatingFilterProxy
GenericFilterBean <|-- FilterChainProxy

DelegatingFilterProxy *- FilterChainProxy

FilterChain <|.... VirtualFilterChain
FilterChainProxy +-- VirtualFilterChain: nested class
'    uml 2.x spec: nested class
'    https://www.uml-diagrams.org/nested-classifier.html

SecurityFilterChain <|.. DefaultSecurityFilterChain
VirtualFilterChain o- DefaultSecurityFilterChain
DefaultSecurityFilterChain *-- YourOwnSecurityFilters


@enduml